--- a/Server/.travis.yml
+++ b/Server/.travis.yml
@@ -1,15 +1,6 @@
 language: node_js
-node_js:
-  - "10.15.3"
-install:
-  - "npm install"
+node_js: 
+  - "stable"
 cache:
   directories:
-  - "node_modules"
-script:
-  - "npm run test"
-after_success: npm run coverage
-branches:
-  only:
-    - develop
-    - ch-test-endpoint-166994978
+    - "node_modules"
