--- a/Server/package.json
+++ b/Server/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.14.0",
+    "connect-form": "^0.2.1",
     "datauri": "^2.0.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
