--- a/Server/.eslintrc
+++ b/Server/.eslintrc
@@ -1,11 +1,34 @@
 {
-    "extends": "airbnb",
-    "parserOptions": {
-        "ecmaVersion": 6
-    },
     "env": {
-        "node": true,
         "browser": true,
-        "es6": true
+        "es6": true,
+        "node": true
+    },
+    "extends": "eslint:recommended",
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+        "ecmaVersion": 2018,
+        "sourceType": "module"
+    },
+    "rules": {
+        "indent": [
+            "error",
+            "tab"
+        ],
+        "linebreak-style": [
+            "error",
+            "windows"
+        ],
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "semi": [
+            "error",
+            "always"
+        ]
     }
 }
