--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ cache:
   - "node_modules"
 script:
   - "npm run test"
-after_success: npm run coverage
+after_success: 
+  - npm run coverage
 branches:
   only:
     - develop
