--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/chrismeeky/PropertyPro"
+    "url": ""
   },
   "author": "Nwodo Christian Chukwuemeka",
   "license": "ISC",
@@ -48,14 +48,12 @@
     "@babel/register": "^7.4.4",
     "babel-register": "^6.26.0",
     "coveralls": "^3.0.4",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "morgan": "^1.9.1",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-import-resolver-meteor": "^0.3.4",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-meteor": "^4.0.1",
-    "eslint-plugin-react": "^7.5.1"
+    "morgan": "^1.9.1"
   }
 }
