--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Property pro lite endpoints",
   "main": "index.js",
   "scripts": {
-    "test": "nyc --reporter=html --reporter=text mocha --require @babel/register --require @babel/polyfill Server/index.js --exit",
+    "test": "mocha --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "start": "nodemon --exec babel-node src/app.js",
     "build": "babel src --out-dir dist",
@@ -22,15 +22,13 @@
   "author": "Nwodo Christian Chukwuemeka",
   "license": "ISC",
   "dependencies": {
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
-    "mocha": "^6.1.4",
-    "nyc": "^14.1.1",
     "@babel/polyfill": "^7.4.4",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cloudinary": "^1.14.0",
     "connect-form": "^0.2.1",
     "datauri": "^2.0.0",
@@ -38,9 +36,14 @@
     "express": "^4.17.1",
     "express-router": "0.0.1",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.1"
+    "mocha": "^6.1.4",
+    "multer": "^1.4.1",
+    "node-mocks-http": "^1.7.6",
+    "nyc": "^14.1.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
