chore(Unit testing): performed unit testing on all api endpoints [finishes #167060932]

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Property pro lite endpoints",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --exit",
+    "test": "nyc  mocha --require @babel/register --require @babel/polyfill Server/*.js --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "start": "nodemon --exec babel-node src/app.js",
     "build": "babel src --out-dir dist",
