--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha --timeout 10000 --require @babel/register --require @babel/polyfill Server/test/*.js --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "start": "nodemon --exec babel-node src/app.js",
+    "start": "nodemon --exec babel-node Server/index.js",
     "build": "babel src --out-dir dist",
     "serve": "node dist/server.js"
   },
@@ -24,6 +24,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
