--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/chrismeeky/PropertyPro"
   },
   "author": "Nwodo Christian Chukwuemeka",
   "license": "ISC",
