--- a/package.json
+++ b/package.json
@@ -36,16 +36,18 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-router": "0.0.1",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.1.4",
     "multer": "^1.4.1",
     "node-mocks-http": "^1.7.6",
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "pg": "^7.11.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
-    "@babel/cli": "^7.4.4",
+    
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
