--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ install:
 cache:
   directories:
   - "node_modules"
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database propertyprolite;' -U postgres    
 script:
   - "npm run test"
 after_success: 
