--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,26 @@
 language: node_js
 node_js:
   - "stable"
+ services:
+  - postgresql 
 install:
   - "npm install"
 cache:
   directories:
   - "node_modules" 
+ before_script:
+  - psql -c 'create database propertyprolite;' -U postgres 
+  - psql -c 'CREATE TABLE IF NOT EXISTS users (
+id bigserial not null,
+email text not null primary key,
+first_name text not null,
+last_name text not null,
+password text not null,
+"phoneNumber" text not null,
+state text not null,
+city text not null,
+address text not null,
+is_admin boolean not null);'
 script:
   - "npm run test"
 after_success: 
