--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-router": "0.0.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "make-runnable": "^1.3.6",
     "mocha": "^6.1.4",
     "multer": "^1.4.1",
     "node-mocks-http": "^1.7.6",
