chore(set up database): Set cloud database for postgresql [finishes #167270848]

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "engines": {
+    "node": "10.16.0"
+  },
   "description": "Property pro lite endpoints",
   "main": "index.js",
   "scripts": {
