--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha --no-timeout --require @babel/register --require @babel/polyfill Server/test/*.js --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "start": "nodemon --exec babel-node Server/index.js",
-    "build": "babel src --out-dir dist",
-    "serve": "node dist/server.js"
+    "start": "nodemon --exec babel-node Server/index.js"
+    
   },
   "babel": {
     "presets": [
