--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "test": "nyc --reporter=html --reporter=text mocha --no-timeout --require @babel/register --require @babel/polyfill Server/test/*.js --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "start": "nodemon --exec babel-node Server/index.js",
-    "build": "babel src --out-dir dist",
+    "build": "babel Server --out-dir dist ./build --copy-files",
     "deploy": "gh-pages -d UI"
-    
   },
   "babel": {
     "presets": [
@@ -26,9 +25,9 @@
   "author": "Nwodo Christian Chukwuemeka",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.5.4",
     "@babel/polyfill": "^7.4.4",
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
@@ -50,11 +49,11 @@
     "pg": "^7.11.0"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^6.1.4",
-    "@babel/core": "^7.4.5",
-    "@babel/node": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/cli": "^7.0.0-rc.1",
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/node": "^7.0.0-rc.1",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.0.0-rc.1",
     "@babel/register": "^7.4.4",
     "babel-register": "^6.26.0",
     "coveralls": "^3.0.4",
