--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "server",
+  "name": "api",
   "version": "1.0.0",
-  "engines": {
-    "node": "10.16.0"
-  },
-  "description": "Property pro lite endpoints",
-  "main": "index.js",
+  "description": "PropertyPro-lite enpoint to be consumed by my frontend",
+  "main": "src/app.js",
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha --no-timeout --require @babel/register --require @babel/polyfill Server/test/*.js --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "start": "nodemon --exec babel-node Server/index.js",
-    "build": "babel src --out-dir dist",
+    "build": "babel Server --out-dir ./build --copy-files",
     "deploy": "gh-pages -d UI"
-    
   },
   "babel": {
     "presets": [
@@ -21,49 +17,44 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/chrismeeky/PropertyPro"
+    "url": "git+https://github.com/zanio/PropertyPro-lite.git"
   },
-  "author": "Nwodo Christian Chukwuemeka",
+  "author": "Aniefiok Akpan",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/zanio/PropertyPro-lite/issues"
+  },
+  "homepage": "https://github.com/zanio/PropertyPro-lite#readme",
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
-    "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cloudinary": "^1.14.0",
-    "connect-form": "^0.2.1",
     "datauri": "^2.0.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-router": "0.0.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "make-runnable": "^1.3.6",
-    "mocha": "^6.1.4",
     "multer": "^1.4.1",
-    "node-mocks-http": "^1.7.6",
     "nyc": "^14.1.1",
     "pg": "^7.11.0"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^6.1.4",
-    "@babel/core": "^7.4.5",
-    "@babel/node": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/cli": "^7.5.0",
+    "@babel/core": "^7.5.4",
+    "@babel/node": "^7.5.0",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.5.4",
     "@babel/register": "^7.4.4",
     "babel-register": "^6.26.0",
-    "coveralls": "^3.0.4",
-    "eslint": "^4.9.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "mocha-lcov-reporter": "^1.3.0",
-    "morgan": "^1.9.1"
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.5",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.0",
+    "mocha": "^6.1.4",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.3"
   }
 }
