--- a/package.json
+++ b/package.json
@@ -8,12 +8,8 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "start": "node ./build/index.js",
     "build": "babel Server --out-dir ./build --copy-files",
-    "deploy": "gh-pages -d UI"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
+    "deploy": "gh-pages -d UI",
+    "dev": "nodemon --exec babel-node Server/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +17,11 @@
   },
   "author": "Nwodo Christian Chukwuemeka",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.5.0",
+    "@babel/runtime": "^7.5.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "chai-http": "^4.3.0",
@@ -39,9 +40,9 @@
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.4",
     "@babel/node": "^7.5.0",
-    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.4",
     "@babel/register": "^7.4.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-register": "^6.26.0",
     "chai": "^4.2.0",
     "coveralls": "^3.0.5",
