chore(set up database): Set cloud database for postgresql [finishes #167270848]

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "start": "node ./build/index.js",
     "build": "babel Server --out-dir ./build --copy-files",
-    "deploy": "gh-pages -d UI",
-    "dev": "nodemon --exec babel-node Server/index.js"
+    "deploy": "gh-pages -d UI"
   },
   "repository": {
     "type": "git",
