--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "start": "node ./build/index.js",
     "build": "babel Server --out-dir ./build --copy-files",
-    "deploy": "gh-pages -d UI"
+    "deploy": "gh-pages -d UI",
+    "dev": "nodemon --exec babel-node Server/index.js"
   },
   "repository": {
     "type": "git",
