chore(modularize token verification): [finishes #167339701]

--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "datauri": "^2.0.0",
     "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.1",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "express": "^4.17.1",
     "express-router": "0.0.1",
     "joi": "^14.3.1",
@@ -52,5 +54,7 @@
     "swagger-ui-express": "^4.0.7",
     "yamljs": "^0.3.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint-plugin-react": "^7.14.2"
+  }
 }
