--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cloudinary": "^1.14.0",
+    "codeclimate-test-reporter": "^0.5.1",
     "coveralls": "^3.0.5",
     "datauri": "^2.0.0",
     "dotenv": "^8.0.0",
